log
Wed 27 Sep 2023 09:47:54 PM UTC: 
 heap.c | 27 +++++++++++----------------
 1 file changed, 11 insertions(+), 16 deletions(-)
 tests:  0|4
total_score: 0/70
2ebf384
Wed 27 Sep 2023 09:48:39 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
cc24d97
Wed 27 Sep 2023 09:53:52 PM UTC: 
 heap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
af878c1
Wed 27 Sep 2023 09:55:37 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:20:3: error: cannot convert to a pointer type
   20 |   return ((heapElem*)pq->heapArray[0])->data;
      |   ^~~~~~
Compilation failed
fa1c95f
Wed 27 Sep 2023 10:03:01 PM UTC: 
 heap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
38c9879
